k8s/networkPolicy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {}  # 選取所有的 Pod
  policyTypes:
  - Ingress
  - Egress
