k8s/networkPolicy/ingress-ssh.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ssh-only
  namespace: default
spec:
  podSelector: {}  
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 22
